# libunicode

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .vimspector.json  CMakeLists.txt  CMakePresets.json  Changelog.md  README.md  TODO.md  autogen.sh  pylintrc  script-test-cyrillic.txt  script-test.txt  vcpkg.json  zbug.txt
.github/: FUNDING.yml  labeler.yml
.github/workflows/: build.yml  checks.yml  osx.yml  release.yml  ubuntu.yml  windows.yml
cmake/: PedanticCompiler.cmake  ThirdParties.cmake
cmake/presets/: common.json  os-linux.json  os-macos.json  os-windows.json
scripts/: ci-prepare.ps1  ci-prepare.sh  install-deps.ps1  install-deps.sh
src/libunicode/: CMakeLists.txt  age_test.cpp  apigen.cpp  benchmark.cpp  bidi_mirroring_test.cpp  capi.cpp  capi.h  capi_test.cpp  case_mapping.cpp  case_mapping.h  case_mapping_test.cpp  codepoint_properties.cpp  codepoint_properties.h  codepoint_properties_data.cpp  codepoint_properties_data.h  codepoint_properties_loader.cpp  codepoint_properties_loader.h  codepoint_properties_names.cpp  convert.cpp  convert.h  convert256.cpp  convert512.cpp  convert_simd_impl.h  convert_test.cpp  emoji_presentation_scanner.c  emoji_presentation_scanner.rl  emoji_segmenter.cpp  emoji_segmenter.h  emoji_segmenter_test.cpp  grapheme_line_segmenter.h  grapheme_line_segmenter.md  grapheme_line_segmenter_test.cpp  grapheme_segmenter.cpp  grapheme_segmenter.h  grapheme_segmenter_test.cpp  intrinsics.h  libunicode-config-version.cmake.in  libunicode-config.cmake.in  mktables.py  multistage_table_generator.h  (+35 more)
src/libunicode/support/: multistage_table_generator.h
src/libunicode/tablegen/: case_norm_generator.cpp  case_norm_generator.h  enum_generator.cpp  enum_generator.h  enum_utils.h  multistage_generator.cpp  multistage_generator.h  tablegen_main.cpp  ucd_api_generator.cpp  ucd_api_generator.h  ucd_parser.cpp  ucd_parser.h
src/tools/: CMakeLists.txt  uc-inspect.cpp  unicode-query.cpp
src/unicode/: CMakeLists.txt  capi.cpp  capi.h  capi_test.cpp  codepoint_properties.cpp  codepoint_properties.h  codepoint_properties_loader.cpp  codepoint_properties_loader.h  convert.h  convert_test.cpp  emoji_presentation_scanner.c  emoji_presentation_scanner.rl  emoji_segmenter.cpp  emoji_segmenter.h  emoji_segmenter_test.cpp  grapheme_segmenter.cpp  grapheme_segmenter.h  grapheme_segmenter_test.cpp  intrinsics.h  libunicode-config.cmake.in  mktables.py  run_segmenter.cpp  run_segmenter.h  run_segmenter_test.cpp  scan.cpp  scan.h  scan_test.cpp  script_segmenter.cpp  script_segmenter.h  script_segmenter_test.cpp  support.h  tablegen.cpp  test_main.cpp  text_segmenter.cpp  text_segmenter.h  text_segmenter_test.cpp  ucd.cpp  ucd.h  ucd_enums.h  ucd_fmt.h  (+15 more)
src/unicode/detail/: convert-avx512.hpp  convert-avx512bw.hpp  convert-common.hpp  convert-naive.hpp  convert-sse.hpp
src/unicode/support/: multistage_table_generator.h  multistage_table_view.h
tests/: zalgo.txt
